2007-02-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* common.make (LD_LIB_PATH_SCRIPT): Unused variable removed.

2007-02-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* GNUmakefile.in (install): Fixed installation of debugapp.  It
	was installed with wrong permissions in the wrong directory
	(Reported by Fred Kiefer <fredkiefer@gmx.de>).

2007-02-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Instance/resource-set.make (RESOURCE_FILES_INSTALL_DIR): Only use
	xxx_RESOURCE_FILES_INSTALL_DIR if xxx_INSTALL_DIR is not set.  In
	this way, GNUmakefiles that need to be backwards compatible can set
	both the old and the new variable, and work both with old and
	new gnustep-makes.
	* common.make: Emit a deprecation warning is
	GNUSTEP_INSTALLATION_DIR is used.

2007-02-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* filesystem.sh.in: Unset all GNUSTEP_USER_DIR_* variables
	after using them.
	* GNUmakefile.in: Install print_unique_pathlist.sh.
	* print_unique_pathlist.sh: New file.
	* GNUstep.sh.in: Updated for new filesystem support.
	* GNUstep.csh.in: Updated for new filesystem support.  Use
	unsetenv consistently for all the filesystem variables.
	* filesystem.csh.in: Use setenv/unsetenv for all variables for
	consistency with the config files.
	
2007-02-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* common.make: Moved top-level PATH sanity check at the end of the
	file.  In the check, use GNUSTEP_SYSTEM_TOOLS instead of
	GNUSTEP_SYSTEM_ROOT/Tools.  Avoid the check on Cygwin where paths
	need conversion.

2007-02-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Instance/framework.make ($(DUMMY_FRAMEWORK_FILE)): Return the
	real complete installation path into +frameworkPath; return nil
	into +frameworkEnv.  These methods are currently unused, but
	future versions of gnustep-base might read +frameworkPath to have
	a better chance of finding the framework on disk.